# rektslug

./: .dockerignore  .env.example  .gitignore  .mcp.fullbrowser.json  CLAUDE.md  CURRENT_SCOPE.md  Dockerfile  LOCK_PROTECTION.md  README.md  docker-compose.yml  ingest_full_history_n8n.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  tasks.md
.claude/commands/: dashboard-check.md  refresh-heatmap.md  validate-heatmap.md  validate-liqmap.md
.github/workflows/: ci.yml  core-deploy.yml  release.yml  screenshot-validation.yml  techdocs.yml  trigger-progressive-deploy.yml  validation.yml
.swarm/: hnsw.index  hnsw.metadata.json  memory.db
data/validation/: comparison_hl_btc_variants_raw_usd.json  comparison_hl_eth_1d.json  hl_open_order_margin_gap_eth_7d.json  hl_order_state_reconstruction_eth_sample.json  hl_reserved_margin_outliers_eth_sample.json  hl_reserved_margin_proxy_eth_sample.json  hl_sidecar_eth_1d_sensitivity.json  liqmap_hl_eth_1d.json  margin_validation_blockers.json  margin_validation_report.json  margin_validation_report_candidate_e.json  pm_account_snapshots.json  portfolio_margin_accounts.json  portfolio_margin_accounts_full.json  portfolio_margin_repo_scan.json  reserved_margin_allocation_modes.json  reserved_margin_guardrail_sweep.json  (+9 more)
docs/: ARCHITECTURE.md  CONTINUOUS_RUNTIME.md  DATA_VALIDATION.md  EXCHANGE_COMPARISON.md  EXCHANGE_INTEGRATION.md  EXECUTION_READINESS_EXTERNAL_REVIEW.md  EXECUTION_READINESS_ROADMAP.md  PRODUCTION_CHECKLIST.md  PRODUCTION_E2E_STATUS.md  QUESTDB_HOT_PATH_PHASE1.md  QUESTDB_HOT_PATH_PHASE2.md  QUESTDB_RUNTIME_BOUNDARY_MATRIX.md  index.md  provider-api-comparison.md  provider-api-handoff.md  provider-comparison-handoff.md  spec033_handoff.md
frontend/: coinglass_heatmap.html  compare.html  heatmap.html  heatmap_30d.html  historical_liquidations.html  liq_map_1w.html  liquidation_map.html  validation_dashboard.html
scripts/: analyze_hl_open_order_margin_gap.py  analyze_hl_order_state_reconstruction.py  analyze_hl_reserved_margin_outliers.py  analyze_hl_reserved_margin_proxy.py  analyze_hl_sidecar_sensitivity.py  backfill_hl_snapshots.py  backtest_models.py  build_hyperliquid_sidecar_prototype.py  build_portfolio_margin_review_package.py  build_spec040_evidence.py  calculate_liquidations.py  capture_hyperliquid_info_snapshots.py  capture_provider_api.py  check_hl_backfill_batch.py  coinank_screenshot.py  coinglass_bundle_report.py  coinglass_decode_payload.js  coinglass_decode_standalone.js  collect_liquidations.py  compare_hl_reserved_margin_allocation_modes.py  compare_hl_reserved_margin_netting_modes.py  compare_hl_sidecar_variants.py  compare_hl_sidecar_vs_coinglass.py  compare_hl_solver_v1_vs_v1_1.py  compare_provider_liquidations.py  continuous_consumer.py  continuous_testnet.py  daily_ingestion.py  deploy-core.sh  fault_injection_runner.py  fill_gap_from_ccxt.py  generate-scorecard-evidence.py  generate_hyperliquid_sidecar_surface.py  generate_public_parity_report.py  ingest_funding_rate.py  ingest_klines_15m.py  ingest_metrics.py  ingest_oi.py  load_test_aggregator.py  n8n_funding_wrapper.sh  (+32 more)
tests/: conftest.py  test_aggtrades_streaming.py  test_api_client.py  test_api_client_extension.py  test_api_websocket.py  test_api_websocket_gap_fill.py  test_api_websocket_integration.py  test_binance_modeled_snapshot_producer.py  test_build_portfolio_margin_review_package.py  test_bybit_historical_bridge.py  test_bybit_modeled_snapshot_producer.py  test_bybit_source_readiness.py  test_calibration_profiles.py  test_capture_hyperliquid_info_snapshots.py  test_capture_provider_api.py  test_circuit_breaker.py  test_circuit_breaker_store.py  test_compare_hl_reserved_margin_allocation_modes.py  test_compare_hl_reserved_margin_netting_modes.py  test_correlation_engine.py  test_coverage_booster.py  test_e2e.py  test_hl_backfill_monitor.py  test_hl_backfill_runner.py  test_hyperliquid_backfill.py  test_hyperliquid_builder_integration.py  test_hyperliquid_manifest_layout.py  test_hyperliquid_margin_math_defaults.py  test_hyperliquid_producer_cli.py  test_hyperliquid_run_metadata.py  test_hyperliquid_sidecar.py  test_hyperliquid_snapshot_schema.py  test_liquidation_model.py  test_low_hanging_coverage.py  test_margin_validator.py  test_margin_validator_extension.py  test_modeled_snapshot_aggregation.py  test_modeled_snapshot_backfill.py  test_modeled_snapshot_export_layout.py  test_modeled_snapshot_schema.py  (+27 more)
(+551 files in other folders)
